# home-assistant-enea

./: .gitignore  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml  sitecustomize.py
.claude/: settings.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report_en.yml  bug_report_pl.yml  feature_request_en.yml  feature_request_pl.yml
.github/workflows/: hacs.yaml  hassfest.yaml  tests.yaml
custom_components/enea/: __init__.py  config_flow.py  connector.py  const.py  coordinator.py  costs.py  diagnostics.py  manifest.json  sensor.py  services.yaml  statistics.py
custom_components/enea/translations/: en.json  pl.json
tests/: conftest.py  test_config_flow.py  test_connector.py  test_coordinator.py  test_sensor.py  test_statistics.py
