[project]
name = "home-assistant-enea"
version = "1.1.1"
requires-python = ">=3.14.2,<3.15"

[dependency-groups]
dev = [
    "homeassistant>=2026.3.3",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "BLE", "B"]
ignore = ["B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
